# simse-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  CORE_REF  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  install.ps1  install.sh  moon.yml  package.json
.github/workflows/: release.yml
copilot/: index.ts  plugin.json
github/: plugin.json
ollama/: index.js  index.ts  plugin.json
perplexity/: index.ts
plugin-sdk/: package.json  tsconfig.json
plugin-sdk/src/: ambient.d.ts  index.ts
plugins/: index.json  package.json  tsconfig.json  types.d.ts
plugins/claude/: index.js  index.ts  package.json  plugin.json
plugins/claude/src/: anthropic-sdk.d.ts  index.ts
plugins/code-review/: SKILL.md  plugin.json
plugins/copilot/: index.js  index.ts  package.json  plugin.json  tsconfig.json
plugins/copilot/src/: copilot-sdk.d.ts  index.ts
plugins/format-on-save/: hooks.toml  plugin.json
plugins/format-on-save/scripts/: format.sh
plugins/gemini/: package.json  plugin.json
plugins/gemini/src/: gemini-sdk.d.ts  index.ts
plugins/github/: index.js  index.ts  package.json  plugin.json  tsconfig.json
plugins/github/src/: index.ts
plugins/ollama/: index.js  index.ts  package.json  plugin.json
plugins/ollama/src/: index.ts
plugins/openai/: package.json  plugin.json  tsconfig.json
plugins/openai/src/: index.ts  openai-sdk.d.ts
plugins/perplexity/: index.js  index.ts  package.json  plugin.json  tsconfig.json
plugins/perplexity/src/: index.ts
scripts/: assemble-dist.sh  build-plugins.sh  install.ps1  install.sh  typecheck.sh  validate-plugins.sh
src/: app.rs  at_mention.rs  auth.rs  auth_cmd.rs  autocomplete.rs  banner.rs  cli_args.rs  constants.rs  dispatch.rs  error_box.rs  event_loop.rs  headless.rs  inference_client.rs  json_io.rs  levenshtein.rs  lib.rs  main.rs  markdown.rs  marketplace.rs  memory_client.rs  openai_compat.rs  output.rs  plugin_loader.rs  protocol.rs  remote_cmd.rs  remote_transport.rs  search.rs  session_store.rs  spinner.rs  status_bar.rs  tool_call_box.rs
src/commands/: files.rs  meta.rs  mod.rs  session.rs
src/config/: acp.rs  mcp.rs  mod.rs  plugins.rs
src/handlers/: mod.rs  remote.rs  session.rs
src/proto/: foundry.adaptive.rs  mod.rs  quantiz.adaptive.rs
src/tools/: memory.rs  mod.rs  subagent_cli.rs
src/ui_core/: app.rs  mod.rs
src/ui_core/commands/: mod.rs  registry.rs
src/ui_core/input/: keybindings.rs  mod.rs  state.rs
src/ui_core/state/: conversation.rs  mod.rs  permission_manager.rs  permissions.rs  session.rs
src/ui_core/text/: file_mentions.rs  image_input.rs  mod.rs
src/ui_core/tools/: mod.rs  parser.rs
src/update/: bridge.rs  control.rs  input.rs  loop_events.rs  mod.rs  navigation.rs  search.rs
